la pagina web ha sido terminada

--- a/capa_aplicacion.html
+++ b/capa_aplicacion.html
@@ -34,7 +34,7 @@
         <p>Cabe aclarar que el usuario normalmente no interactúa directamente con el nivel de aplicación. Suele interactuar con programas que a su vez interactúan con el nivel de aplicación pero ocultando la complejidad subyacente. Así por ejemplo un usuario no manda una petición «GET /index.html HTTP/1.0» para conseguir una página en html, ni lee directamente el código html/xml. O cuando chateamos con el Mensajero Instantáneo, no es necesario que codifiquemos la información y los datos del destinatario para entregarla a la capa de Presentación (capa 6) para que realice el envío del paquete</p>
         <div style="text-align: center;">
           <video controls>
-              <source src="fisica.mov" type="video/mp4">
+              <source src="apli.mp4" type="video/mp4">
               Tu navegador no soporta la etiqueta video.
             </video>
       </div>
