se agrego un boton para descargar un archivo

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
 			
             <img src="ecapsulamiento.jpg" alt="imagen del ecapsulamiento"  width="500">
       </section>
+      <section id = "descarga">
+        <h6>Articulo relacionado</h6>
+        <p> A continuacion se puede descargar un articulo donde se explica mas detalladamente el modelo OSI</p>
+        <a href="ElmodeloOSI.pdf" download>
+          <button class="boton-descarga">Descargar archivo</button>
+        </a>
+      </section>
     </main>
     <footer>
         
