--- a/capa_presentacion.html
+++ b/capa_presentacion.html
@@ -31,7 +31,7 @@
             <h3>¿Qué es?</h3>
            <p> El nivel de presentación o capa de presentación es el sexto nivel del Modelo OSI, y es el que se encarga de la representación de la información, de manera que aunque distintos equipos puedan tener diferentes representaciones internas de caracteres (ASCII, Unicode, EBCDIC), números (little-endian tipo Intel, big-endian tipo Motorola), sonido o imágenes, los datos lleguen de manera reconocible.</p>
             <p>esta capa es la encargada de manejar las estructuras de datos abstractas y realizar las conversiones de representación de datos necesarias para la correcta interpretación de los mismos. </p>
-            <img src="presentacion.jpg.crdownload" alt="Imagen del modelo OSI" width="600">
+            <img src="presentacion.jpg" alt="Imagen del modelo OSI" width="600">
             <p>La capa de presentación es la encargada de:</p>
             <ul>
               <li>Definir el formato de los datos que se van a intercambiar entre las aplicaciones y ofrecer un conjunto de servicios de transformación de datos.</li>
