--- a/capa_sesion.html
+++ b/capa_sesion.html
@@ -80,7 +80,7 @@
           a un sistema remoto de tiempo compartido o para transferir un archivo
           entre dos máquinas.
 
-          <img src="sesion.jpg.crdownload"Imagen del modelo OSI" width="600">
+          <img src="sesion.jpg"Imagen del modelo OSI" width="600">
         </p>
       </section>
       <section id="protocolos">
